remove type param from requests && bookmarks in only one collection && lint
